# LKBox

./: CMakeLists.txt  LICENSE  README.md
docs/: README.MD
lib/assimp/: CMakeLists.txt
lib/assimp/code/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_draw.cpp
lib/stb/: CMakeLists.txt
resources/objects/cube/: cube.mtl
resources/objects/honoka/: Honoka Kosaka (No Brand Girls).mtl
resources/objects/room/: room.mtl
resources/shader/: 2.model_loading.fs  2.model_loading.vs
src/: main.cpp
src/Camera/: camera.h
src/Core/: Core.cpp  Core.h
src/Info/: LKBox.rc
src/Model/: mesh.h  model.h
